# tziakcha_record_miner

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  record_lists.json
.github/workflows/: deploy-pages.yml  format.yml  release.yml  test.yml
ci/fetch/: fetch_date_range.sh
ci/stats/: rank_stat.sh  step_time_stat.sh
config/: fetcher_config.json
include/analyzer/: action.h  core.h  game_log.h  game_state.h  record_parser.h  record_printer.h  simulator.h  win_analyzer.h
include/base/: mahjong_constants.h
include/calc/: fan_calculator.h
include/config/: fetcher_config.h
include/fetcher/: history_fetcher.h  record_fetcher.h  record_parser.h  session_fetcher.h
include/stats/: intercept_stats.h  player_stats.h  player_stats_config.h
include/storage/: filesystem_storage.h  storage.h
include/utils/: gb_format_converter.h  script_decoder.h  tile.h
src/: CMakeLists.txt
src/analyzer/: CMakeLists.txt  action.cpp  analyzer_cli.cpp  core.cpp  game_state.cpp  record_parser.cpp  simulator.cpp  win_analyzer.cpp
src/calc/: CMakeLists.txt  fan_calculator.cpp  fan_calculator_core.cpp
src/config/: CMakeLists.txt  fetcher_config.cpp
src/fetcher/: CMakeLists.txt  fetcher_cli.cpp  history_fetcher.cpp  record_fetcher.cpp  record_parser.cpp  session_fetcher.cpp
src/stats/: CMakeLists.txt  intercept_stats.cpp  player_stats.cpp  stats_cli.cpp
src/storage/: CMakeLists.txt  filesystem_storage.cpp
src/utils/: CMakeLists.txt  gb_format_converter.cpp  script_decoder.cpp  tile.cpp
test/: CMakeLists.txt
test/scripts/: CMakeLists.txt  fan_verification_report.txt  run_verification.sh  verify_fan_calculator.cpp
test/unit/: CMakeLists.txt  fan_calculator_test.cpp  mahjong_constants_test.cpp  record_parser_test.cpp  storage_test.cpp
